force-app/main/default/objects/Action_Centre__c/Action_Centre__c.object-meta.xml
<CustomObject>
    <description>Represents a Nurse House action centre, either a Medical Centre or a Client Support Centre</description>
    <label>Action Centre</label>
    <nameField>
        <label>Action Centre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>