force-app/main/default/objects/Action_Centre__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <type>TextArea</type>
    <label>Address</label>
    <description>Physical address of the action centre</description>
</CustomField>