force-app/main/default/objects/Action_Centre__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City portion of the action centre&apos;s physical address</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>