force-app/main/default/objects/Action_Centre__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country portion of the action centre&apos;s physical address</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>