force-app/main/default/objects/Action_Centre__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact email address of the action centre</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>