force-app/main/default/objects/Action_Centre__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Geographic latitude of the action centre, used for map display. Look up coordinates at maps.google.com.</description>
    <label>Latitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>