force-app/main/default/objects/Action_Centre__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Geographic longitude of the action centre, used for map display. Look up coordinates at maps.google.com.</description>
    <label>Longitude</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>