force-app/main/default/objects/Action_Centre__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact phone number of the action centre</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>