force-app/main/default/objects/Action_Centre__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street portion of the action centre&apos;s physical address</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>