force-app/main/default/objects/Action_Centre__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <type>Picklist</type>
    <inlineHelpText/>
    <required>true</required>
    <description>Type of action centre: Medical Centre or Client Support Centre</description>
    <label>Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Centre</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Client Support Centre</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>