force-app/main/default/objects/Action_Centre__c/fields/Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Work_Time__c</fullName>
    <type>Text</type>
    <label>Work Time</label>
    <description>Working hours of the action centre, e.g. Mon-Fri 9:00-18:00</description>
    <length>255</length>
</CustomField>