force-app/main/default/objects/Action_Centre__c/listViews/All_Action_Centres.listView-meta.xml
<ListView>
    <fullName>All_Action_Centres</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Action Centres</label>
</ListView>